# steno

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  dictionary_pack.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dictionaries/community/: steno-dict-code.toml  steno-dict-medical.toml  steno-dict-science.toml
dictionaries/core/: universal.toml
docs/: contributing-dictionaries.md  launch-posts.md  project-state.md  token-savings-report.html
docs/plans/: 2026-04-12-phase1-core-crate.md  2026-04-12-phase2-cli.md  2026-04-12-phase3-mcp.md  2026-04-12-steno-design.md  2026-04-12-steno-phase1.md  2026-05-12-steno-improvements-brainstorm.md  2026-05-12-steno-phase5-design.md
src/: config.rs  gain.rs  learn.rs  lib.rs  main.rs
src/codec/: builder.rs  codec.rs  header.rs  mod.rs
src/dictionary/: core.rs  loader.rs  mod.rs  types.rs
src/layers/: abbreviate.rs  mod.rs  strip.rs  substitute.rs
src/mcp/: server.rs
