[package]
name = "steno"
version = "0.1.0"
edition = "2021"
description = "Compress anything going into your LLM. Less tokens, same meaning."
license = "MIT"
repository = "https://github.com/deemuk123/steno"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "steno"
path = "src/lib.rs"

[[bin]]
name = "steno"
path = "src/main.rs"
