[package]
name = "deemuk"
version = "1.0.0"
edition = "2021"
description = "Compress any text before it enters your LLM. Less tokens, same meaning."
license = "MIT"
repository = "https://github.com/deemuk123/steno"
keywords = ["llm", "compression", "tokens", "cli", "nlp"]
categories = ["command-line-utilities", "text-processing", "compression"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "steno"
path = "src/lib.rs"

[[bin]]
name = "deemuk"
path = "src/main.rs"
